--- a/Budget/res/values/strings.xml
+++ b/Budget/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="animate">Animate</string>
     <string name="insert">Insert</string>
     <string name="delete">Delete</string>
+    <string name="addCategory">Please Enter new Category</string>
+    <string name="save">Save</string>
+    <string name="addUser">Please Enter new UserName</string>
     
     
   
